<resources>
    <string name="app_name">RPS</string>
    <string name="choice_choki">Choice Choki</string>
    <string name="choice_gu">Choice Gu</string>
    <string name="choice_pa">Choice Pa</string>
    <string name="title_text">じゃんけん</string>
    <string name="result_title">ぽんっ！</string>
    <string name="my_result">My Result</string>
    <string name="enemy_result">Enemy Result</string>
    <string name="again_button_text">もう一度</string>
    <string name="background_image">background_image</string>
    <string name="intro_text">手を選んでね！</string>
    <string name="enemy_image">Enemy Image</string>
    <string name="result_caption">じゃんけん結果</string>
    <string name="result_caption_win">勝利！！</string>
    <string name="result_caption_lose">負け...</string>
    <string name="result_caption_draw">あいこ</string>
    <string name="score_text">スコア 勝ち:0 負け:0 あいこ:0</string>
</resources>